# SnakeGameRefactor

./: Class Diagram1.asta  README.md  SnakeDesign.asta  SnakeDesign1.asta  SnakeDesign_2024-06-17.asta  SnakeGameSRS1.0.docx  SnakeGameSRS_QA 的副本.xlsx  SnakeGameSRS_QA.xlsx  SnakeGameSRS_QA_v0606.xlsx  consideration.txt  ~$akeGameSRS1.0.docx  ~$ecase3.docx
SnakeGame/: CMakeLists.txt  main.cpp
UMLs_and_Reflections/: Class Diagram1.asta  SnakeDesign_2024-06-13.asta  SnakeDesign_2024-06-132.asta  SnakeDesign_2024-06-14a.asta  SnakeDesign_2024-06-17.asta  SnakeGameSRS1.0.docx  Usecase2.docx  Usecase3.docx  Usecase反馈1.docx  Usecase反馈2.docx
cppSnakeRefactor/: .gitignore  .smp  .smproj  Apple.cpp  Apple.h  CMakeLists.txt  Drawable.h  Fruit.cpp  Fruit.h  FruitFactory.cpp  FruitFactory.h  Game.cpp  Game.h  Global.h  KeyController.cpp  KeyController.h  Main.h  Mine.cpp  Mine.h  OnTimeListener.h  Orange.cpp  Orange.h  Painter.h  ScoreBoard.cpp  ScoreBoard.h  Snake.cpp  Snake.h  Timer.cpp  Timer.h  Yard.cpp  Yard.h  main.cpp
cppSnakeRefactor/directions/: Direction.cpp  Direction.h  DirectionDown.cpp  DirectionDown.h  DirectionLeft.cpp  DirectionLeft.h  DirectionRight.cpp  DirectionRight.h  DirectionUp.cpp  DirectionUp.h
cppSnakeRefactor/src/: .smproj  Apple.cpp  Drawable.h  Fruit.cpp  Fruit.h  FruitFactory.cpp  FruitFactory.h  Game.cpp  Game.h  Global.h  KeyController.cpp  KeyController.h  Main.h  OnTimeListener.h  Orange.h  Painter.cpp  Painter.h  ScoreBoard.cpp  Snake.cpp  Snake.h  Yard.h  stdafx.h
cppSnakeRefactor/src/directions/: DirectionDown.cpp  DirectionLeft.cpp  DirectionLeft.h  DirectionRight.h
cppSnakeRefactor/tests/: FruitFactory_test.cpp  Snake_test.cpp  main_test.cpp
其他/: CMakeLists.txt
